feat: splitted controller and service
 * Splitted controller and service
 * Added PUT and DELETE endpoints
 * Added Build status
